upgrade Java backend to the latest Java version